<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/loginView_space"
        android:layout_width="wrap_content"
        android:layout_height="142dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/loginView_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/loginView_name_input"
            android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:inputType="text"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/loginView_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/loginView_password_input"
            android:selectAllOnFocus="true"
			android:lines="1"
			android:inputType="textPassword"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/loginView_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:text="@string/signup_button" />

        <Button
            android:id="@+id/loginView_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.42"
            android:text="@string/login_button" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe_checkbox" />

</LinearLayout>